# RemedyAI-Backend

./: .env.example  README.md  pyproject.toml  requirements.txt
scripts/: init_db.py
src/: config.py  database.py  main.py  models.py  routes.py  services.py
